토비의의 클린 스프링 - 도메인 모델 패턴과 헥사고날 아키텍처 Part 1 - 멤버 애그리거트 개발